<resources>
    <string name="app_name">IntentAndActivity</string>
    <string name="enterName">Enter Name</string>
    <string name="name">Name</string>
    <string name="enterAddress">Enter Address</string>
    <string name="address">Address</string>
    <string name="enterAge">Enter Age</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
    <string name="close">Close</string>
    <string name="details">Personal Details</string>
</resources>